--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -30,6 +31,7 @@
         <li>
             <input type="radio" class="slide-btn" id="slide1" name="slide" checked>
             <label for="slide1"></label>
+            <!-- <div class="text-banner">Caption Two</div> -->
             <img src="css/images/bg-1.png" />
         </li>
         <li>
