--- a/port-2.html
+++ b/port-2.html
@@ -38,141 +38,57 @@
             <h1 class="label-port">Ilustrações</h1>
         </p>
 
+
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Sandshrew</figcaption>
                 <a data-fancybox="gallery" href="css/images/i-sandshrew.png"><img src="css/images/ilustra-sand.png" alt="Sandshrew"></a>
-                <!-- <img id="myImg" class="port-cell" src="css/images/ilustra-sand.png" alt="Sandshrew"> -->
-
-<!--                 <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Knight</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-knight.png"><img src="css/images/ilustra-knight.png" alt="Knight"></a>
-                <!-- <img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-knight.jpg"><img src="css/images/ilustra-knight.png" alt="Knight"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Alucard</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-alucard.png"><img src="css/images/ilustra-alucard.png" alt="Alucard"></a>
-<!--                 <img class="port-cell" src="css/images/ilustra-alucard.png" alt="Ilustrações"> -->
-                
-<!--                 <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-alucard.jpg"><img src="css/images/ilustra-alucard.png" alt="Alucard"></a>
             </div>
             <div class="grid-item">
                 <figcaption>King Goat</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-goat.png"><img src="css/images/ilustra-goat.png" alt="King Goat"></a>
-<!--                 <img class="port-cell" src="css/images/ilustra-goat.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-goatking.jpg"><img src="css/images/ilustra-goat.png" alt="King Goat"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Pumpkinmon</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-pumpkinmon.png"><img src="css/images/ilustra-pumpkinmon.png" alt="Pumpkinmon"></a>                
-<!--                 <img class="port-cell" src="css/images/ilustra-pumpkinmon.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-pumpkinmon.jpg"><img src="css/images/ilustra-pumpkinmon.png" alt="Pumpkinmon"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Krizalid</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-krizalid.png"><img src="css/images/ilustra-krizalid.png" alt="Krizalid"></a> 
-<!--                 <img class="port-cell" src="css/images/ilustra-krizalid.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-krizalid.jpg"><img src="css/images/ilustra-krizalid.png" alt="Krizalid"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Sherlock</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-sherlock.png"><img src="css/images/ilustra-sherlock.png" alt="Sherlock"></a> 
-<!--                 <img class="port-cell" src="css/images/ilustra-sherlock.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-sherlock.jpg"><img src="css/images/ilustra-sherlock.png" alt="Sherlock"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Captain America</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-captainamerica.png"><img src="css/images/ilustra-captainamerica.png" alt="Captain America"></a> 
-<!--                 <img class="port-cell" src="css/images/ilustra-captainamerica.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-captainamerica.jpg"><img src="css/images/ilustra-captainamerica.png" alt="Captain America"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Age of Ulton</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-ageofultron.png"><img src="css/images/ilustra-ageofultron.png" alt="Age of Ulton"></a>
-<!--                 <img class="port-cell" src="css/images/ilustra-ageofultron.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-ageofultron.png"><img src="css/images/ilustra-ageofultron.png" alt="Age of Ulton"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Mother of the Dragons </figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-motherofdragons.png"><img src="css/images/ilustra-motherofdragons.png" alt="Mother of the Dragons"></a>
-<!--                 <img class="port-cell" src="css/images/ilustra-motherofdragons.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-motherofdragons.jpg"><img src="css/images/ilustra-motherofdragons.png" alt="Mother of the Dragons"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Akuma</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-akuma.png"><img src="css/images/ilustra-akuma.png" alt="Akuma"></a>
-<!--                 <img class="port-cell" src="css/images/ilustra-akuma.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-akuma.jpg"><img src="css/images/ilustra-akuma.png" alt="Akuma"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Slifer</figcaption>
-                <a data-fancybox="gallery" href="css/images/ilustra-slifer.png"><img src="css/images/ilustra-slifer.png" alt="Slifer"></a>
-                <!-- <img class="port-cell" src="css/images/ilustra-slifer.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
-                    <div id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/i-slifer.jpg"><img src="css/images/ilustra-slifer.png" alt="Slifer"></a>
             </div>
         </div>
-
     </section>
 
     <footer id="footer-normal">
