--- a/port-3.html
+++ b/port-3.html
@@ -40,58 +40,23 @@
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Volare</figcaption>
-                <a data-fancybox="gallery" href="css/images/design-volare.png"><img src="css/images/design-volare.png" alt="Volare"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/d-volare.jpg"><img src="css/images/design-volare.png" alt="Volare"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Jandaia</figcaption>
-                <a data-fancybox="gallery" href="css/images/design-jandaia.png"><img src="css/images/design-jandaia.png" alt="Jandaia"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/d-jandaia.jpg"><img src="css/images/design-jandaia.png" alt="Jandaia"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Cecomil</figcaption>
-                <a data-fancybox="gallery" href="css/images/design-cecomil.png"><img src="css/images/design-cecomil.png" alt="Cecomil"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/design-cecomil.png" alt="Cecomil">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/d-cecomil.jpg"><img src="css/images/design-cecomil.png" alt="Cecomil"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Draw In</figcaption>
-                <a data-fancybox="gallery" href="css/images/design-drawin.png"><img src="css/images/design-drawin.png" alt="Draw In"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/design-drawin.png" alt="Draw In">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/d-drawin.png"><img src="css/images/design-drawin.png" alt="Draw In"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Time Mentor</figcaption>
-                <a data-fancybox="gallery" href="css/images/design-timementor.png"><img src="css/images/design-timementor.png" alt="Time Mentor"></a>
-                <!-- <img id="myImg" class="port-cell" src="css/images/design-timementor.png" alt="Time Mentor">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/d-timementor.png"><img src="css/images/design-timementor.png" alt="Time Mentor"></a>
             </div>
         </div>
     </section>
