--- a/port-4.html
+++ b/port-4.html
@@ -37,40 +37,18 @@
             <h1 class="label-port">Modelagem 3D</h1>
         </p>
 
-
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Charizard</figcaption>
-                <a data-fancybox="gallery" href="css/images/model-charizard.png"><img src="css/images/model-charizard.png" alt="Charizard"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/m-charizard.png"><img src="css/images/model-charizard.png" alt="Charizard"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Impmon</figcaption>
-                <a data-fancybox="gallery" href="css/images/model-impmon.png"><img src="css/images/model-impmon.png" alt="Impmon"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/model-impmon.png" alt="Impmon">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/m-impmon.jpg"><img src="css/images/model-impmon.png" alt="Impmon"></a>
             </div>
             <div class="grid-item">
                 <figcaption>Pokebola</figcaption>
-                <a data-fancybox="gallery" href="css/images/model-pokebola.png"><img src="css/images/model-pokebola.png" alt="Impmon"></a>
-<!--                 <img id="myImg" class="port-cell" src="css/images/model-pokebola.png" alt="Pokebola">
-
-                <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" class="img" id="img01">
-                    <div class="caption" id="caption"></div>
-                </div> -->
+                <a data-fancybox="gallery" href="css/images/m-pokeball.png"><img src="css/images/model-pokebola.png" alt="Impmon"></a>
             </div>
         </div>
     </section>
