--- a/sobre.html
+++ b/sobre.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -25,44 +26,53 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-
     <section>
-
-        <article class="sobre1">
-            <img id="img-perfil" src="css/images/perfil.png" alt="Perfil">
-            <h1>Quem sou eu?</h1>
-            <p>
-                Me chamo <b>Douglas Alves da Silva</b>, moro em Fortaleza, Ceará, mas nasci em Salvador, Bahia. Me formei Técnico em Informática pelo Instituto Federal de Ciência e Tecnologia do Ceará - IFCE em 2012, e atualmente estou cursando Sistemas
-                e Mídias Digitais na Universidade Federal do Ceará - UFC.
-            </p>
+        <article class="anime">
+            <div class="sobre1">
+                <img id="img-perfil" src="css/images/perfil.png" alt="Perfil">
+                <h1>Quem sou eu?</h1>
+                <p>
+                    Me chamo <b>Douglas Alves da Silva</b>, moro em Fortaleza, Ceará, mas nasci em Salvador, Bahia. Me formei Técnico em Informática pelo Instituto Federal de Ciência e Tecnologia do Ceará - IFCE em 2012, e atualmente estou cursando Sistemas
+                    e Mídias Digitais na Universidade Federal do Ceará - UFC.
+                </p>
+            </div>
         </article>
 
-        <article class="sobre2">
-            <img id="img-hobbies" src="css/images/hobbies.png" alt="Hobbies">
-            <h1>Hobbies</h1>
-            <p>
-                Gosto de assitir filmes, séries, animês, jogar vídeo games, board games e cardgames, ler mangás, escutar música, de desenhar e também de comer e cozinhar.
-            </p>
+        <article class="anime">
+            <div class="sobre2">
+                <img id="img-hobbies" src="css/images/hobbies.png" alt="Hobbies">
+                <h1>Hobbies</h1>
+                <p>
+                    Gosto de assitir filmes, séries, animês, jogar vídeo games, board games e cardgames, ler mangás, escutar música, de desenhar e também de comer e cozinhar.
+                </p>
+            </div>
+
         </article>
 
-        <article class="sobre3">
-            <img id="img-skills" src="css/images/skills.png" alt="Habilidades">
-            <h1>Software skills</h1>
-            <p>
-                Possuo experiências com os seguinte programas: <b>Blender 3D, CorelDraw, Photoshop, Illustrator, Indesign, Experience Design, After Effects, Premiere.</b>
-            </p>
+        <article class="anime">
+            <div class="sobre3">
+                <img id="img-skills" src="css/images/skills.png" alt="Habilidades">
+                <h1>Software skills</h1>
+                <p>
+                    Possuo experiências com os seguinte programas: <b>Blender 3D, CorelDraw, Photoshop, Illustrator, Indesign, Experience Design, After Effects, Premiere.</b>
+                </p>
+            </div>
+
         </article>
 
-        <article class="sobre4">
-            <img id="img-exp" src="css/images/xp.png" alt="Experiência profissional">
-            <h1>Experiência profissional</h1>
-            <p>
-                <b>Apple Developer Academy</b><br> UI/UX Designer, Ilustrador e Animador 2D - Janeiro de 2016/ Janeiro de 2018 Fortaleza, Brasil<br><br>
-                <b>LIT - Laboratório de Inovação Tecnológica (IFCE)</b><br>UI/UX Designer, Ilustrador e Animador 2D - Janeiro de 2015/ Janeiro de 2016 Fortaleza, Brasil
-            </p>
-        </article>
+        <article class="anime">
+            <div class="sobre4">
+                <img id="img-exp" src="css/images/xp.png" alt="Experiência profissional">
+                <h1>Experiência profissional</h1>
+                <p>
+                    <b>Apple Developer Academy</b><br> UI/UX Designer, Ilustrador e Animador 2D - Janeiro de 2016/ Janeiro de 2018 Fortaleza, Brasil<br><br>
+                    <b>LIT - Laboratório de Inovação Tecnológica (IFCE)</b><br>UI/UX Designer, Ilustrador e Animador 2D - Janeiro de 2015/ Janeiro de 2016 Fortaleza, Brasil
+                </p>
+            </div>
 
+        </article>
     </section>
+
 
     <footer id="footer-normal">
         <h4 id="copyright2">© Douglas Silva 2018</h4>
